--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <header class="article__header">
             <h1 class="article__title">Chapter 1.</h1>
             <p class="article__copy">My story begins in the fall of 2013, when I decided that an iPhone just wasn't cutting it and invested in an entry level DSLR. After taking a hundred photos of anything/everything I could see, I decided to take it to car shows - tying two of my favourite hobbies together. I’d noticed that people really appreciated getting home and finding photos of their cars online, which led to an immediate love of automotive photography.</p>
-            <button data-behaviour="next" class="button">Chapter 2.</button>
+            <button data-behaviour="next" class="button">Next</button>
           </header>
         </article>
       </div>
@@ -38,7 +38,7 @@
           <header class="article__header">
             <h1 class="article__title">Chapter 2.</h1>
             <p class="article__copy">I ended up selling that camera to my sister, as she was enrolling onto a photography course at college. This meant that my photography took a back seat, until the end of 2015. When I decided to purchase a Fuji x100t as a daily point and shoot, as I missed taking photos so much! I couldn't put this camera down and I was so impressed with the images that it was creating. So, I decided to start a photography page, which was entirely devoted to automotive photography. I went to almost every car show within the stance scene in 2016 and even managed to get a very talented videographer on board too! Every weekend in the summer, I’d drive up to 6 hours, get home, edit and upload my photos to various social media outlets…For nothing more than a love of the craft and making a few people happy!</p>
-            <button data-behaviour="next" class="button">Chapter 3.</button>
+            <button data-behaviour="next" class="button">Next</button>
           </header>
         </article>
       </div>      
@@ -48,7 +48,7 @@
           <header class="article__header">
             <h1 class="article__title">Chapter 3.</h1>
             <p class="article__copy">This brings us to the start of 2017, when I decided to make a huge commitment and purchase a Canon 6D. I plan to push myself as far as possible this year, not just with automotive photography, but with portraiture, landscapes and any other opportunities that come my way.</p>
-            <button data-behaviour="next" class="button">Chapter 4.</button>
+            <button data-behaviour="next" class="button">Next</button>
           </header>
         </article>
       </div>      
