--- a/src/index.html
+++ b/src/index.html
@@ -43,16 +43,16 @@
   <main class="page">
     <div class="carousel" data-behaviour="carousel">
       <div>
-        <img src="/images/banner-1.jpg" />
+        <img src="/images/banner-1.jpg" class="carousel__image" />
       </div>
       <div>
-        <img src="/images/banner-2.jpg" />
+        <img src="/images/banner-2.jpg" class="carousel__image" />
       </div>
       <div>
-        <img src="/images/banner-3.jpg" />
+        <img src="/images/banner-3.jpg" class="carousel__image" />
       </div>
       <div>
-        <img src="/images/banner-4.jpg" />
+        <img src="/images/banner-4.jpg" class="carousel__image" />
       </div>
     </div>
     <section class="section">
@@ -101,21 +101,21 @@
 
       <ul class="social">
         <li>
-          <a href="#" class="social__item">
+          <a href="https://www.instagram.com/james.parrett/" target="_blank" class="social__item">
             <svg width="32" height="32" class="social__icon">
               <use xlink:href="#social-instagram" />
             </svg>
           </a>
         </li>
         <li>
-          <a href="#" class="social__item">
+          <a href="https://www.flickr.com/photos/slimbojimbo" target="_blank" class="social__item">
             <svg width="32" height="32" class="social__icon">
               <use xlink:href="#social-flickr" />
             </svg>
           </a>
         </li>
         <li>
-          <a href="#" class="social__item">
+          <a href="mailto:jamesoparrett@gmail.com" class="social__item">
             <svg width="32" height="32" class="social__icon">
               <use xlink:href="#social-email" />
             </svg>
